# skeletree

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_MAP.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/skeletree/: __init__.py  cache.py  cli.py  config.py  core.py  deps.py  model.py  tokens.py  walker.py
src/skeletree/extractors/: __init__.py  base.py  python_ast.py  treesitter.py
src/skeletree/render/: __init__.py  json_out.py  markdown.py
tests/: test_cache.py  test_cli.py  test_config.py  test_python_ast.py  test_render.py  test_tokens.py  test_treesitter.py  test_walker.py
