[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skeletree"
version = "0.1.0"
description = "A token-cheap skeleton of any repo for AI coding agents — tree + signatures, no bodies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "skeletree contributors" }]
keywords = [
    "claude-code",
    "llm",
    "ai",
    "coding-agent",
    "code-map",
    "tree-sitter",
    "tokens",
    "context",
    "cursor",
    "aider",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "pathspec>=0.12",
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.7",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/daudibrahimhasan/skeletree"
Repository = "https://github.com/daudibrahimhasan/skeletree"
Issues = "https://github.com/daudibrahimhasan/skeletree/issues"

[project.scripts]
skeletree = "skeletree.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skeletree"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501: line length handled by formatter; B008: typer.Option/Argument in
# defaults is the idiomatic Typer pattern, not a bug.
ignore = ["E501", "B008"]

[tool.skeletree]
# skeletree dogfoods its own config. These are also the defaults.
out = "PROJECT_MAP.md"
format = "md"
